app/assets/stylesheets/bootstrap_and_overrides.css.scss
$gray: #D8D8D8;
$darkgray: #606060;
$white: #ffffff;
$darkred: #990033;
$black: #000000;
$osulink: #0E4E8E;
$navbarCollapseWidth: 767px;

@mixin rounded-corners {
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

@mixin tab-corners {
  border-radius: 0 0 10px 10px;
  -moz-border-radius: 0 0 10px 10px;
  -webkit-border-radius: 0 0 10px 10px;
}

@mixin element-shadow {
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
  }

@import "bootstrap";
@import "bootstrap-responsive";

/* sitewide */
body {
  padding-top: 40px;
  background: $white;
  font-family: 'Noto Sans', sans-serif;
 }

a {
  color: $osulink; 
  }
  
a:hover, a:focus {
  text-decoration: underline;
    }
    
#main {
  padding-top: 50px;
  min-height: 360px;
  }

select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
  height: 30px;
  color: $black;
  }

.nav-tabs > .active > a, .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
  color: $darkgray;
  }

/* nav bar */
.navbar .nav {
  float: right;
  font-size: 16px;
  margin: 30px 0 0 0;
  }

.navbar .brand {
  padding: 5px;
  }
  
.navbar-fixed-top, .navbar-fixed-bottom {
  position: absolute;
  }

.btn.btn-navbar {
  margin-top: 12px;
}


/* footer */
#contact-bar {
  width: 100%;
  background-color: $darkgray;
  border-top: solid 2px $darkred;
  border-bottom: solid 2px $darkred;
  /* not sure about this, dealing with offset */
  margin: 50px 0 0 30px;
  text-align: center;
  height: 70px;
  .container a {
    position: relative;
    float: right;
  	img {
  	  padding: 10px 7px;
  	  }
  	}
  a:hover {
    opacity: .8;
    }
  }
  
#contact-text {
  position: relative;
  float: right;
  color: $white;
  padding: 25px;
  font-size: 28px;
  }

#trio-bar {
  width: 100%;
  /* not sure about this, dealing with offset */
  margin-left: 20px;
  margin-top: 10px;
  }
  
.trio-text {
  .span4 {
    img {
      position: relative;
      float: left;
      padding: 5px 15px 0 0;
      }
    a {
      color: $darkred;
      }
    }
  }

#COE img {
  padding: 5px 20px 0 0;
  }

#license-images {
  width: 101px;
  }

#end-text {
  margin: 20px 0 0 0;
  border-top: 1px solid $gray;
  p {
    padding: 5px 0 0 0;
    }
  }

/* studies */
/**
 * We were getting squished markers on maps
 * http://stackoverflow.com/questions/10821304/google-maps-marker-strangely-stretched-issue
 */
.map label { width: auto; display:inline; }
.map img { max-height: none; max-width: none; }

/* vote */
.vote-button {
  background: url('SS-vote-btn.png') no-repeat center;
  height: 100px;
  position:relative;
  text-align: center;
  margin: -25px 0 0 0;
  }

.vote-button-text {
  color: $white;
  font-size: 48px;
  position: relative;
  top: 36px;
  }

#display-question {
  margin-top: 20px;
  }

.skip-vote-row a {
  color: $darkred;
  }

.vote-image {
  display: inline;
  img {
    position: relative;
    padding-top: 20px;
    }
  }

/* curate */
.curate a.thumbnail {
  width:220px;
  float:left;
}

/* responsive */
@media (max-width: 979px) {
  .navbar .brand{
    width: 150px;
  }
  .navbar .nav {
    margin: 7px 0 0 0;
  }
}

@media (max-width: 767px) {
  .overlay-corner{
    width: 200px;
  }
  #main {
    padding-top: 20px;;
  }
  #contact-bar {
    margin: 50px 0 0 0;
  }
  #trio-bar {
  	display: none;
  }
  #trio-text {
    display: none;
  }
  .navbar-fixed-top {
    margin-left: 0;
    margin-right: 0;
  }
  .navbar .nav {
    float: left;
    margin: 0;
  }
}

/* overlay - remove in production */
.overlay-corner {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1500;
  border: 0 none;
}

.overlay-logo {
  .span3 {
    position: absolute;
    top: 0;
    z-index: 1400;
    @include tab-corners;
    @include element-shadow;
    border: 0 1px 1px 1px;
    border-color: $white;
    background-color: $gray;
    margin-left: 0;
    }
}

